0.7
------
- /lib/modules, /var/run/dbus, /sys/fs/cgroup now mounted inside the container
- added the DNS_ADDR configuration line to target a specific DNS server for name resolution
- Changed the Docker image to run /sbin/init by default, to allow access to the systemctl command